v7.2: 4 platform threads + realistic JIT warmup
v7 (-3254) used 2 platform threads with a random-vector warmup. Under
the rinha k6 ramp (1→900 RPS over 120s, 2001 ms client timeout) the
JIT path the warmup compiled wasn't the path real fraud queries hit,
so the first burst of traffic queued past the timeout cap.

v7.1 (-6000) switched to virtual threads. Every request fanned out to
the 0.45 CPU per container and dragged each other to the timeout.

v7.2:
- App.java: fixed pool sized via WORKERS env (default 4). Bounded
  concurrency keeps per-request latency low; the 4096 accept backlog
  absorbs short bursts.
- App.java: warmup samples 2000 real dataset vectors with ±0.5% noise,
  forcing the cluster-scan + bbox-repair path to be C2-compiled
  before /ready returns 200.
- Dockerfile + docker-compose.yml: ship WORKERS=4.

Local k6 with the official rinha plan: p99=65.13 ms, failure rate=0%,
final_score=+4186.21. Image pushed as anddev741/rinha-fraud-java:v7.2.