@@ -42,34 +42,41 @@ public final class App {
 
         warmup(dataset);
 
-        // Backlog of 1024 keeps short bursts from hitting the OS accept queue
-        // limit. Anything past that returns RST and looks like 502 at nginx.
-        HttpServer server = HttpServer.create(new InetSocketAddress(port), 1024);
+        // Backlog of 4096 absorbs the rinha k6 ramp (peaks ~900 RPS).
+        HttpServer server = HttpServer.create(new InetSocketAddress(port), 4096);
         server.createContext("/ready", new ReadyHandler());
         server.createContext("/fraud-score", new FraudHandler(dataset));
-        // Virtual threads (JDK 21+): each request is its own VT, which gets
-        // unmounted while it waits on the socket. We don't need to size a
-        // pool against the cgroup CPU limit — the JVM only schedules the
-        // ones actively computing the k-NN. This is the fix for the v7
-        // rinha submission, which hit 45.9 % errors with a fixed 2-thread pool.
-        server.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
+        // v7.1 (virtual threads) hit -6000 on rinha because every request
+        // competed for the same 0.45 CPU, dragging p99 to the 2001 ms k6
+        // timeout. v7.2 reverts to a small fixed pool: bounded concurrency
+        // protects per-request latency, the accept backlog absorbs bursts.
+        int workers = envInt("WORKERS", 6);
+        server.setExecutor(Executors.newFixedThreadPool(workers));
         server.start();
 
-        System.out.printf("[app] listening on :%d with virtual threads%n", port);
+        System.out.printf("[app] listening on :%d with %d worker threads%n", port, workers);
     }
 
     /**
-     * "Warms up" the JIT by running 1k searches with random vectors. Makes C2
-     * compile the hot paths before the first real request, reducing the early
-     * p99 of the test.
+     * Warm up the JIT against the real dataset. Random queries mostly bbox-
+     * prune to nothing, so they don't exercise the cluster-scan hot path
+     * that real fraud queries trigger. We sample 2000 dataset vectors as
+     * near-self queries: each one forces a full cluster scan plus bbox-
+     * repair against a few neighbours, which mirrors real traffic.
      */
     private static void warmup(Dataset ds) {
         var searcher = new KnnSearcher(ds);
-        float[] q = new float[Dataset.DIMS];
+        short[] vectors = ds.vectors();
+        int dims = Dataset.DIMS;
+        int count = ds.count();
+        float invScale = 1f / Dataset.SCALE;
+        float[] q = new float[dims];
         Random rng = new Random(42);
-        for (int i = 0; i < 1000; i++) {
-            // Random floats in [0, 1] — matches Vectorizer output range.
-            for (int j = 0; j < q.length; j++) q[j] = rng.nextFloat();
+        for (int i = 0; i < 2000; i++) {
+            int base = rng.nextInt(count) * dims;
+            for (int j = 0; j < dims; j++) {
+                q[j] = vectors[base + j] * invScale + (rng.nextFloat() - 0.5f) * 0.005f;
+            }
             searcher.fraudScore(q);
         }
         System.out.println("[app] warmup complete");
